Change Catalyst 5 to 4, fix dates, fix some spacing issues

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <link href="style.css" rel="stylesheet" />
     <meta name="viewport" content="initial-scale=1, minimum-scale=1" />
     <link rel="icon" type="image/png" href="./assets/favicon.png" />
-    <meta property="og:title" content="Catalyst 5" />
+    <meta property="og:title" content="Catalyst 4" />
     <meta
       property="og:description"
-      content="Catalyst is a free event held on Satuday March 28th, where metro Atlanta high school students will epxlore technology and learn from our sponsors and mentors at Georgia Tech."
+      content="Catalyst is a free event held on Satuday, March 28, 2020, where metro Atlanta high school students will epxlore technology and learn from our sponsors and mentors at Georgia Tech."
     />
     <!-- <meta property="og:url" content="https://catalyst.hack.gt"> -->
     <title>Catalyst</title>
@@ -137,7 +137,7 @@
                   HackGT presents Catalyst, a FREE day of STEAM directed towards
                   high school students in the Metro Atlanta Area. We are eager
                   to welcome all of these students on
-                  <b><u>Saturday March 28th</u></b> to Georgia Tech's Campus.
+                  <b><u>Saturday, March 28th</u></b> to Georgia Tech's Campus.
                 </p>
               </div>
 
@@ -151,7 +151,9 @@
                 Learn about the world of STEAM and Computer Science as a career
                 path.
               </li>
-              <li>Gain insight into impactful, widely known tech companies.</li>
+              <li>
+                Gain insight into impactful, widely known tech companies.
+              </li>
               <li>
                 Receive mentorship from college students and industry
                 professionals.
@@ -170,7 +172,7 @@
               <div class="col">
                 <p>
                   Throughout the day, students will follow one of four tracks:
-                  Hardware, Gaming, InfoSec, MusicTech
+                  Hardware, Gaming, Information Security, MusicTech
                 </p>
 
                 <p>
