Open links in new tab, fix some grammar errors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       content="Catalyst is a free event held on Saturday, March 28th, where metro Atlanta high school students will epxlore technology and learn from our sponsors and mentors at Georgia Tech."
     />
     <title>Catalyst</title>
+    <base target="_blank" />
   </head>
 
   <body>
@@ -173,7 +174,7 @@
               <div class="col">
                 <p>
                   Throughout the day, students will follow one of four tracks:
-                  Hardware, Gaming, Info Security, MusicTech
+                  Hardware, Gaming, Info Security, MusicTech.
                 </p>
 
                 <p>
@@ -398,7 +399,7 @@
             <div>
               <p>Coming soon!</p>
               <p>
-                Interested in sponsoring catalyst? Send us an email to
+                Interested in sponsoring Catalyst? Send us an email to
                 <a href="sposorship@hack.gt">sponsorship@hack.gt</a> - we're
                 looking forward to working with you!
               </p>
