Still attempting to fix mobile view (register button)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
 
           <!--<div class="register"><a href="#important-info">Day-Of Info</a></div>-->
-          <div class="register"><a href="https://registration.catalyst.hack.gt/">Register</a></div> 
+          <div id="regbutton"><div class="register"><a href="https://registration.catalyst.hack.gt/">Register</a></div><div>
                 <!-- </div> -->
         </section>
         
