--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="col">
                 <p>
                   Throughout the day, students will follow one of four tracks:
-                  Hardware, Gaming, Info Security, MusicTech.
+                  Hardware, Gaming, Information Security, or MusicTech.
                 </p>
 
                 <p>
@@ -304,12 +304,12 @@
               <p>How do I choose which track to attend?</p>
               <p>
                 Participants will be able to choose which track they would like
-                to follow at the event.
+                to attend during registration.
               </p>
 
               <p>What is HackGT?</p>
               <p>
-                HackGT is a student organization and 501(c)(4) non-profit at
+                HackGT is a student organization and 501(c)(3) non-profit at
                 Georgia Tech devoted to Computer Science outreach in collegiate
                 and high school communities. To learn more, check out our
                 organization website <a href="https://hack.gt">here</a>.
