--- a/index.html
+++ b/index.html
@@ -59,17 +59,20 @@
                 <img src="assets/logo.png" />
               </div>
               <h3>Presented by HackGT</h3>
+              <h4>Saturday, March 28, 2020</h4>
             </div>
           </div>
-          <div id="countdown">
-            <div><span id="days">0</span></div>
-            <div><span id="hours">0</span></div>
-            <div><span id="minutes">0</span></div>
-            <div><span id="seconds">0</span></div>
+          <div id="bucket">
+            <div id="countdown">
+              <div><span id="days">0</span></div>
+              <div><span id="hours">0</span></div>
+              <div><span id="minutes">0</span></div>
+              <div><span id="seconds">0</span></div>
+            </div>
+  
+            <!--<div class="register"><a href="#important-info">Day-Of Info</a></div>-->
+            <div id="regbutton"><div class="register"><a href="https://registration.catalyst.hack.gt/">Register</a></div><div>
           </div>
-
-          <!--<div class="register"><a href="#important-info">Day-Of Info</a></div>-->
-          <div id="regbutton"><div class="register"><a href="https://registration.catalyst.hack.gt/">Register</a></div><div>
                 <!-- </div> -->
         </section>
         
@@ -129,8 +132,9 @@
 
                 <p>
                   We want to show high school students the value of computer
-                  science, which is why we are providing free food, free swag,
-                  and everything needed to get started.
+                  science. STEM is showing up in numerous subjects across the board, 
+                  and at HackGT, we feel that every student should have access to
+                  the necessary materials to follow their dreams.
                 </p>
               </div>
 
