--- a/index.html
+++ b/index.html
@@ -87,30 +87,55 @@
                   to welcome all of these students on
                   <b><u>Saturday, March 28th</u></b> to Georgia Tech's Campus.
                 </p>
+                <p>This will be an opportunity for participants to:</p>
+                <ul>
+                  <li>
+                    Learn about the world of STEAM and Computer Science as a career
+                    path.
+                  </li>
+                  <li>
+                    Gain insight into impactful, widely known tech companies.
+                  </li>
+                  <li>
+                    Receive mentorship from college students and industry
+                    professionals.
+                  </li>
+                  <li>
+                    Connect with more opportunities at Georgia Tech & in the city to
+                    further their education and exposure.
+                  </li>
+                </ul>
+                <p>
+                  Are you a current Georgia Tech student? You can still participate 
+                  in this event! Each year GT students volunteer as mentors to help 
+                  facilitate the projects and activities included in each track. This 
+                  is an opportunity for you to directly interact with high school students 
+                  from the Metro Atlanta area and share your passion and knowledge for computer 
+                  science and engineering. Responsibilities of mentors include:
+                    <ul>
+                      <li>
+                        Co-leading a student cohort of up to 12 students
+                      </li>
+                      <li>
+                        Encouraging mentees to network within cohorts
+                      </li>
+                      <li>
+                        Encouraging mentees to learn throughout the day
+                      </li>
+                      <li>
+                        Encouraging mentees to learn after Catalyst is over
+                      </li>
+                      <li>
+                        Arriving on-time and staying throughout the entire duration of the event
+                      </li>
+                    </ul>
+                </p>
               </div>
 
               <!-- ASSET <div class="col">
                             <img src="assets/about.svg"/>
                         </div> -->
             </div>
-            <p>This will be an opportunity for participants to:</p>
-            <ul>
-              <li>
-                Learn about the world of STEAM and Computer Science as a career
-                path.
-              </li>
-              <li>
-                Gain insight into impactful, widely known tech companies.
-              </li>
-              <li>
-                Receive mentorship from college students and industry
-                professionals.
-              </li>
-              <li>
-                Connect with more opportunities at Georgia Tech & in the city to
-                further their education and exposure.
-              </li>
-            </ul>
           </div>
         </section>
         <section class="lax" data-lax-translate-y="(2*vh) 100, (4*vh) 0" id="day">
@@ -131,10 +156,8 @@
                 </p>
 
                 <p>
-                  We want to show high school students the value of computer
-                  science. STEM is showing up in numerous subjects across the board, 
-                  and at HackGT, we feel that every student should have access to
-                  the necessary materials to follow their dreams.
+                  We want to show high school students the value of computer science, 
+                  which is why we are providing all of the resources you'll need to get started!
                 </p>
               </div>
 
@@ -153,7 +176,10 @@
                   You can register
                   <a href="https://registration.catalyst.hack.gt/">here!</a>
                 </p>
-                <p>Registration closes on March 13th, so sign up now!</p>
+                <p>
+                  Registration closes on March 14th for participants and 
+                  February 21st for mentors, so sign up now!
+                </p>
               </div>
 
               <!-- ASSET <div class="col">
