fixed registration button

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
               <h4>Saturday, March 28, 2020</h4>
             </div>
           </div>
-          <div id="bucket">
-            <a href="https://registration.catalyst.hack.gt/" target="_blank" class="register">
-              <div>
+          <div id="#bucket">
+            <a href="https://registration.catalyst.hack.gt/" target="_blank">
+              <div  class="register">
                 <p>Register</p>
               </div>
             </a>
@@ -76,7 +76,6 @@
   
             <!--<div class="register"><a href="#important-info">Day-Of Info</a></div>-->
           </div>
-                <!-- </div> -->
         </section>
         
         <section id="about">
