Fix sponsorship email

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                   <p>Coming soon!</p>
                   <p>
                       Interested in sponsoring Catalyst? Send us an email to
-                      <a href="sposorship@hack.gt">sponsorship@hack.gt</a> - we're
+                      <a href="mailto:sposorship@hack.gt">sponsorship@hack.gt</a> - we're
                       looking forward to working with you!
                   </p>
                 </div>
