--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
               <h4>Saturday, March 28, 2020</h4>
             </div>
           </div>
-          <div id="#bucket">
-            <a href="https://registration.catalyst.hack.gt/" target="_blank">
+          <div id="bucket">
+            <a href="https://registration.catalyst.hack.gt/" target="_blank" id="registerLink">
               <div  class="register">
                 <p>Register</p>
               </div>
