Added bold fonts, fixed mobile-centered text

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <div class="col">
                 <p>
                   Throughout the day, students will follow one of four tracks:
-                  Hardware, Gaming, Information Security, or MusicTech.
+                  Robotics, Gaming, Information Security, or MusicTech.
                 </p>
 
                 <p>
@@ -198,7 +198,7 @@
               <div class="col">
                 <div id="track-container" class="container">
                   <div class="col">
-                    <p>Hardware</p>
+                    <p>Robotics</p>
                   </div>
 
                   <div class="col track-description">
@@ -208,14 +208,14 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      The hardware track will teach students the fundamentals of
+                      The robotics track will teach students the fundamentals of
                       circuits through the interactions of the Arduino and the
                       breadboard. Throughout the day, you will have lessons
                       about the basics of electronics, slowly building on top of
                       each other, and finishing the day by constructing your own
                       robot. You will create and control your own devices and
                       gain skills just enough to make you slightly dangerous. If
-                      you have a spark in interest, come join hardware!
+                      you have a spark in interest, come join robotics!
                     </p>
                   </div>
                 </div>
