--- a/index.html
+++ b/index.html
@@ -310,9 +310,8 @@
 
               <p>Should I bring anything?</p>
               <p>
-                Nope! We will provide food for every participant and laptops for
-                every team. Our sponsors will also have some free swag for you
-                to take home!
+                Participants <strong>must</strong> bring their forms from registration to the event.
+                You will not be allowed to participate without them!
               </p>
 
               <p>Where is Catalyst?</p>
