updated to say participants need to bring forms

--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
                   Registration closes on March 14th for participants and 
                   February 21st for mentors, so sign up now!
                 </p>
+                <p>
+                  Partcipants <strong>MUST</strong> bring the necessary forms to the event
+                  as stated by registration.
+                </p>
               </div>
 
               <!-- ASSET <div class="col">
