--- a/index.html
+++ b/index.html
@@ -201,10 +201,9 @@
             <div class="container">
               <div class="col">
                 <div id="track-container" class="container">
-                  <div class="col">
+                  <div class="col track-title">
                     <p>Robotics</p>
                   </div>
-
                   <div class="col track-description">
                     <div class="track-icon">
                       <img src="assets/Catalyst_RobotIcon.png" />
@@ -212,19 +211,24 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      The robotics track will teach students the fundamentals of
-                      circuits through the interactions of the Arduino and the
-                      breadboard. Throughout the day, you will have lessons
-                      about the basics of electronics, slowly building on top of
-                      each other, and finishing the day by constructing your own
-                      robot. You will create and control your own devices and
-                      gain skills just enough to make you slightly dangerous. If
-                      you have a spark in interest, come join robotics!
+                      Ever wonder how robots are made? In the Robotics track, you will get to: 
                     </p>
+                    <ul>
+                      <li>
+                        Learn about electronic basics
+                      </li>
+                      <li>
+                        How to create and control your own devices
+                      </li>
+                      <li>
+                        Construct your own robot!
+                      </li>
+                    </ul>
+                    <p>If you have a <strong>spark</strong> in interest, come join hardware!</p>
                   </div>
                 </div>
                 <div id="track-container" class="container">
-                  <div class="col">
+                  <div class="col track-title">
                     <p>Gaming</p>
                   </div>
 
@@ -235,24 +239,26 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      From Minecraft and Mario, to Roblox and Rocket League,
-                      video games are a popular and interactive way to code and
-                      launch experiences! The Gaming track focuses on teaching
-                      fundamental computing concepts by introducing game design
-                      with levels, animations, and characters using block-based
-                      coding. In this programming adventure, participants will
-                      level up by completing short challenges and activities to
-                      reinforce concepts learned and will finish the day with a
-                      fully created game in Scratch. Calling all future game
-                      designers and developers to create the next Fortnite!
+                      Everyone has played video games but have you ever made one? On the Gaming track you will learn about: 
                     </p>
+                    <ul>
+                      <li>
+                        How to build popular video games from games like Mario to Rocket League!
+                      </li>
+                      <li>
+                        Game Design through level creation, animations, and character creation through block-based coding
+                      </li>
+                      <li>
+                        The fundamentals of computing concepts by creating your video game
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
 
               <div class="col">
                 <div id="track-container" class="container">
-                  <div class="col">
+                  <div class="col track-title">
                     <p>Info Security</p>
                   </div>
 
@@ -263,17 +269,25 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      As you browse through Instagram, you're not the only one
-                      scrolling through your feed. Data is being collected every
-                      second, and you are no exception. Join us to learn more
-                      about protecting yourself and your devices through
-                      vulnerability protection, encryption, and cyber
-                      awareness!!
+                      As you browse through Instagram, you're not the only one scrolling through your feed. 
+                      Data is being collected every second, and you are no exception. On the Information Security 
+                      track, you will learn about: 
                     </p>
+                    <ul>
+                      <li>
+                        How to protect yourself from cyber vulnerabilities, attacks, and every day pitfalls
+                      </li>
+                      <li>
+                        Topics surrounding cybersecurity, such as cryptography and stenography
+                      </li>
+                      <li>
+                        Collaborative software development through Github
+                      </li>
+                    </ul>
                   </div>
                 </div>
                 <div id="track-container" class="container">
-                  <div class="col">
+                  <div class="col track-title">
                     <p>MusicTech</p>
                   </div>
 
@@ -284,17 +298,20 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      Are you interested in producing beats for the next biggest
-                      Soundcloud rapper? If so, this track is perfect for you!
-                      The music technology track focuses on the intersection
-                      between music and programming! This track will teach you
-                      how to code in either Python or Javascript to compose
-                      individual beats and ultimately, a song, through a program
-                      called EarSketch. Musicians aren't the only ones that can
-                      make catchy tunes. After going through this track, you,
-                      too, will be equipped with computer science skills to
-                      produce sick beats!
+                      Are you interested in producing beats for the next biggest Soundcloud rapper? 
+                      On the Music Technology track, you will learn about: 
                     </p>
+                    <ul>
+                      <li>
+                        The intersection between music and programming
+                      </li>
+                      <li>
+                        The fundamentals of 2 popular computer programming languages, Javascript and Python
+                      </li>
+                      <li>
+                        How to create a new fire track or remix your favorite songs with code
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
