Decreased the size of descriptions for tracks

--- a/index.html
+++ b/index.html
@@ -211,20 +211,20 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      Ever wonder how robots are made? In the Robotics track, you will get to: 
+                      <font size="+1">Ever wonder how robots are made? In the Robotics track, you will get to:</font> 
                     </p>
                     <ul>
                       <li>
-                        Learn about electronic basics
+                        <font size="+0">Learn about electronic basics</font>
                       </li>
                       <li>
-                        How to create and control your own devices
+                        <font size="+0">How to create and control your own devices</font>
                       </li>
                       <li>
-                        Construct your own robot!
+                        <font size="+0">Construct your own robot!</font>
                       </li>
                     </ul>
-                    <p>If you have a <strong>spark</strong> in interest, come join hardware!</p>
+                    <p><font size="+1">If you have a <strong>spark</strong> in interest, come join hardware!</font> </p>
                   </div>
                 </div>
                 <div id="track-container" class="container">
@@ -239,17 +239,17 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      Everyone has played video games but have you ever made one? On the Gaming track you will learn about: 
+                      <font size="+1">Everyone has played video games but have you ever made one? On the Gaming track you will learn about:</font> 
                     </p>
                     <ul>
                       <li>
-                        How to build popular video games from games like Mario to Rocket League!
+                        <font size="+0">How to build popular video games from games like Mario to Rocket League!</font>
                       </li>
                       <li>
-                        Game Design through level creation, animations, and character creation through block-based coding
+                        <font size="+0">Game Design through level creation, animations, and character creation through block-based coding</font>
                       </li>
                       <li>
-                        The fundamentals of computing concepts by creating your video game
+                        <font size="+0">The fundamentals of computing concepts by creating your video game</font>
                       </li>
                     </ul>
                   </div>
@@ -269,19 +269,19 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      As you browse through Instagram, you're not the only one scrolling through your feed. 
+                      <font size="+1">As you browse through Instagram, you're not the only one scrolling through your feed. 
                       Data is being collected every second, and you are no exception. On the Information Security 
-                      track, you will learn about: 
+                      track, you will learn about:</font>  
                     </p>
                     <ul>
                       <li>
-                        How to protect yourself from cyber vulnerabilities, attacks, and every day pitfalls
+                        <font size="+0">How to protect yourself from cyber vulnerabilities, attacks, and every day pitfalls</font> 
                       </li>
                       <li>
-                        Topics surrounding cybersecurity, such as cryptography and stenography
+                        <font size="+0">Topics surrounding cybersecurity, such as cryptography and stenography</font> 
                       </li>
                       <li>
-                        Collaborative software development through Github
+                        <font size="+0">Collaborative software development through Github</font> 
                       </li>
                     </ul>
                   </div>
@@ -298,18 +298,18 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      Are you interested in producing beats for the next biggest Soundcloud rapper? 
+                      <font size="+1">Are you interested in producing beats for the next biggest Soundcloud rapper? 
                       On the Music Technology track, you will learn about: 
                     </p>
                     <ul>
                       <li>
-                        The intersection between music and programming
+                        <font size="+0">The intersection between music and programming</font> 
                       </li>
                       <li>
-                        The fundamentals of 2 popular computer programming languages, Javascript and Python
+                        <font size="+0">The fundamentals of 2 popular computer programming languages, Javascript and Python</font> 
                       </li>
                       <li>
-                        How to create a new fire track or remix your favorite songs with code
+                        <font size="+0">How to create a new fire track or remix your favorite songs with code</font> 
                       </li>
                     </ul>
                   </div>
