Slightly changed the During the Day description

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                 </p>
 
                 <p>
-                  Each track will have workshops and will allow students to
-                  build a piece of technology they can take home. In addition to
-                  the track workshops, there will be opportunities for students
+                  Each track will have workshops allowing students to
+                  build a piece of technology they can take home. Additionally, 
+                  there will be opportunities for students
                   to engage with industry professionals and college students.
                 </p>
 
