fix track font size

--- a/index.html
+++ b/index.html
@@ -211,20 +211,20 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      <font size="+1">Ever wonder how robots are made? In the Robotics track, you will get to:</font> 
+                      Ever wonder how robots are made? In the Robotics track, you will get to:
                     </p>
                     <ul>
                       <li>
-                        <font size="+0">Learn about electronic basics</font>
+                        Learn about electronic basics
                       </li>
                       <li>
-                        <font size="+0">How to create and control your own devices</font>
+                        How to create and control your own devices
                       </li>
                       <li>
-                        <font size="+0">Construct your own robot!</font>
+                        Construct your own robot!
                       </li>
                     </ul>
-                    <p><font size="+1">If you have a <strong>spark</strong> in interest, come join hardware!</font> </p>
+                    <p>If you have a <strong>spark</strong> in interest, come join hardware!</p>
                   </div>
                 </div>
                 <div id="track-container" class="container">
@@ -239,17 +239,17 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      <font size="+1">Everyone has played video games but have you ever made one? On the Gaming track you will learn about:</font> 
+                     Everyone has played video games but have you ever made one? On the Gaming track you will learn about:
                     </p>
                     <ul>
                       <li>
-                        <font size="+0">How to build popular video games from games like Mario to Rocket League!</font>
+                        How to build popular video games from games like Mario to Rocket League!
                       </li>
                       <li>
-                        <font size="+0">Game Design through level creation, animations, and character creation through block-based coding</font>
+                        Game Design through level creation, animations, and character creation through block-based coding
                       </li>
                       <li>
-                        <font size="+0">The fundamentals of computing concepts by creating your video game</font>
+                        The fundamentals of computing concepts by creating your video game
                       </li>
                     </ul>
                   </div>
@@ -269,19 +269,19 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      <font size="+1">As you browse through Instagram, you're not the only one scrolling through your feed. 
+                      As you browse through Instagram, you're not the only one scrolling through your feed. 
                       Data is being collected every second, and you are no exception. On the Information Security 
-                      track, you will learn about:</font>  
+                      track, you will learn about:  
                     </p>
                     <ul>
                       <li>
-                        <font size="+0">How to protect yourself from cyber vulnerabilities, attacks, and every day pitfalls</font> 
+                        How to protect yourself from cyber vulnerabilities, attacks, and every day pitfalls 
                       </li>
                       <li>
-                        <font size="+0">Topics surrounding cybersecurity, such as cryptography and stenography</font> 
+                        Topics surrounding cybersecurity, such as cryptography and stenography 
                       </li>
                       <li>
-                        <font size="+0">Collaborative software development through Github</font> 
+                        Collaborative software development through Github 
                       </li>
                     </ul>
                   </div>
@@ -298,18 +298,18 @@
                   </div>
                   <div class="track-text">
                     <p>
-                      <font size="+1">Are you interested in producing beats for the next biggest Soundcloud rapper? 
+                      Are you interested in producing beats for the next biggest Soundcloud rapper? 
                       On the Music Technology track, you will learn about: 
                     </p>
                     <ul>
                       <li>
-                        <font size="+0">The intersection between music and programming</font> 
+                        The intersection between music and programming 
                       </li>
                       <li>
-                        <font size="+0">The fundamentals of 2 popular computer programming languages, Javascript and Python</font> 
+                        The fundamentals of 2 popular computer programming languages, Javascript and Python 
                       </li>
                       <li>
-                        <font size="+0">How to create a new fire track or remix your favorite songs with code</font> 
+                        How to create a new fire track or remix your favorite songs with code 
                       </li>
                     </ul>
                   </div>
