FAQ update and Sponsor section height fix

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
               </p>
               <p>Other Questions?</p>
               <p>
-                Email <a href="mailto:hello@hack.gt">hello@hack.gt</a>
+                Email us at <a href="mailto:hello@hack.gt">hello@hack.gt</a> and we'll be happy to help!</a>
               </p>
             </div>
           </div>
