Added registration form links + bold styles

--- a/index.html
+++ b/index.html
@@ -180,13 +180,21 @@
                   <a href="https://registration.catalyst.hack.gt/" target="_blank">here!</a>
                 </p>
                 <p>
-                  Registration closes on March 14th for participants and 
-                  February 21st for mentors, so sign up now!
+                  Registration closes on <strong>March 14th for participants</strong> and 
+                  <strong>February 21st for mentors</strong> , so sign up now!
                 </p>
                 <p>
                   Partcipants <strong>MUST</strong> bring the necessary forms to the event
-                  as stated by registration.
+                  as stated by registration:
                 </p>
+                <ul>
+                  <li>
+                    <a href="https://drive.google.com/uc?export=download&id=1t18WRPrLpFW1kd0t9AuCfTia0waOreAu">UNDER 18</a>
+                  </li>
+                  <li>
+                    <a href="https://drive.google.com/uc?export=download&id=1yHC27yawRhfZgv-MAJrDLN-bT3ceOyce">18 AND OLDER</a>
+                  </li>
+                </ul>
               </div>
 
               <!-- ASSET <div class="col">
