--- a/index.html
+++ b/index.html
@@ -375,6 +375,18 @@
                 and high school communities. To learn more, check out our
                 organization website <a href="https://hack.gt">here</a>.
               </p>
+              <p>What is the A/B schedule? Which one should I pick?</p>
+              <p>
+                To accomodate as many students as possible, we have split the
+                schedule into two sections, A and B. The A schedule runs from
+                9am - 7pm and the B schedule runs from 10am - 8pm. Both schedules 
+                will get the same instructions; they differ only in the start and 
+                end times as well as the timing for a presentation. Whichever schedule
+                you choose has no effect on the content you learn, so pick the one that
+                is most convenient for you! Please note that students being picked-up
+                or dropped-off together should register for the same session.
+              </p>
+
               <p>Other Questions?</p>
               <p>
                 Email us at <a href="mailto:hello@hack.gt">hello@hack.gt</a> and we'll be happy to help!</a>
