--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@
                       <li>
                         Topics surrounding cybersecurity, such as cryptography and stenography 
                       </li>
+                      <li>
+                        Collaborative software development through Github 
+                      </li>
                     </ul>
                   </div>
                 </div>
